# dask-cuda

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  README.md  UCXX_VERSION  codecov.yml  dependencies.yaml  pyproject.toml  pytest.ini  readthedocs.yml  requirements.txt  setup.cfg  setup.py  versioneer.py
.github/: CODEOWNERS  labeler.yml
.github/workflows/: build-ucxx.yaml  build.yaml  labeler.yml  nightly-pipeline.yaml  pr.yaml  test-ucxx.yaml  test.yaml  test_ucxx.yaml  trigger-breaking-change-alert.yaml  wheels.yaml  wheels.yml
benchmarks/: local_cudf_merge.py  local_cupy_map_overlap.py  local_cupy_transpose_sum.py  utils.py
ci/: _test_python.sh  build_docs.sh  build_python.sh  build_python_pypi.sh  build_wheel.sh  check_style.sh  run_benchmarks.sh  run_pytest.sh  test_python.sh  test_python_ucxx.sh  test_wheel.sh  validate_wheel.sh
ci/checks/: style.sh
ci/cpu/: build.sh  upload-anaconda.sh  upload-pypi.sh  upload.sh
ci/docs/: build.sh
ci/gpu/: build.sh
ci/local/: README.md  build.sh
ci/release/: update-version.sh
conda/environments/: all_cuda-114_arch-aarch64.yaml  all_cuda-114_arch-x86_64.yaml  all_cuda-118_arch-aarch64.yaml  all_cuda-118_arch-x86_64.yaml  all_cuda-120_arch-x86_64.yaml  all_cuda-122_arch-x86_64.yaml  all_cuda-125_arch-x86_64.yaml  all_cuda-128_arch-aarch64.yaml  all_cuda-128_arch-x86_64.yaml  all_cuda-129_arch-aarch64.yaml  all_cuda-129_arch-x86_64.yaml  all_cuda-130_arch-aarch64.yaml  all_cuda-130_arch-x86_64.yaml  all_cuda-131_arch-aarch64.yaml  all_cuda-131_arch-x86_64.yaml  all_cuda-132_arch-aarch64.yaml  all_cuda-132_arch-x86_64.yaml  all_cuda-133_arch-aarch64.yaml  all_cuda-133_arch-x86_64.yaml  builddocs_py37.yml
conda/recipes/dask-cuda/: build.sh  meta.yaml  recipe.yaml  variants.yaml
dask_cuda/: VERSION  __init__.py  _bag.py  _compat.py  _dataframe.py  _version.py  cli.py  compat.py  config.py  cuda.yaml  cuda_nanny.py  cuda_worker.py  dask_cuda.yaml  dask_cuda_worker.py  device_host_file.py  dgx.py  disk_io.py  dynamic_host_file.py  get_device_memory_objects.py  initialize.py  initialize_context.py  initialize_ucx.py  is_device_object.py  is_spillable_object.py  local_cuda_cluster.py  nanny.py  object_spilling_host_file.py  plugins.py  proxify_device_object.py  proxify_device_objects.py  proxify_host_file.py  proxy_object.py  rmm_vmm_block_pool.py  rmm_vmm_pool.py  scheduler.py  utils.py  utils_test.py  vmm_pool.py  worker.py  worker_common.py  (+1 more)
dask_cuda/benchmarks/: __init__.py  common.py  local_cuda.py  local_cudf_groupby.py  local_cudf_merge.py  local_cudf_shuffle.py  local_cupy.py  local_cupy_map_overlap.py  local_cupy_transpose_sum.py  local_merge.py  local_read_parquet.py  publish_benchmark.py  read_parquet.py  remote_cudf_merge.py  remote_parquet.py  utils.py
dask_cuda/benchmarks/custom/: __init__.py  parquet.py
dask_cuda/cli/: dask_config.py  dask_cuda_worker.py
dask_cuda/explicit_comms/: __init__.py  comms.py  cudf_merge.py  dask_df_utils.py  dataframe_merge.py  dataframe_shuffle.py  utils.py
dask_cuda/explicit_comms/dataframe/: merge.py  redistribute.py  shuffle.py  utils.py
dask_cuda/hybrid/: cluster.py  sched.out
dask_cuda/tests/: conftest.py  test_benchmarks.py  test_cudf_builtin_spilling.py  test_cudf_native_spilling.py  test_dask_cuda_worker.py  test_dask_setup.py  test_device_host_file.py  test_device_host_file_mapping.py  test_dgx.py  test_dynamic_host_file.py  test_explicit_comms.py  test_from_array.py  test_gds.py  test_initialize.py  test_local_cuda_cluster.py  test_object_spilling_host_file.py  test_proxify_host_file.py  test_proxy.py  test_rdd_ucx.py  test_scheduler.py  test_spill.py  test_ucx_options.py  test_utils.py  test_version.py  test_vmm_block_pool.py  test_vmm_pool.py  test_worker_spec.py
docs/: Makefile  requirements.txt
docs/source/: api.rst  conf.py  explicit_comms.rst  index.rst  install.rst  quickstart.rst  specializations.rst  spilling.rst  troubleshooting.rst  ucx.rst  worker.rst
docs/source/examples/: best-practices.rst  spilling.rst  ucx.rst  worker_count.rst
docs/source/slurm/: create-env.sh  merge-bench-ib-nvlink.sh
examples/ucx/: client_initialize.py  dask-cuda-worker.sh  dask_cuda_worker.sh  local_cuda_cluster.py
examples/ucx/client_initialize/: infiniband_only.py  nvlink_infiniband.py  nvlink_only.py  tcp_only.py
examples/ucx/dask_cuda_worker/: infiniband_only.sh  nvlink_infiniband.sh  nvlink_only.sh  tcp_only.sh
examples/ucx/local_cuda_cluster/: infiniband_only.py  nvlink_infiniband.py  nvlink_only.py  tcp_only.py
rtd/: conf.py  index.rst
rtd/templates/: redirect.html
