[build-system]
build-backend = "setuptools.build_meta:__legacy__"
requires = [
    "setuptools>=64.0.0",
    "tomli  ; python_version < '3.11'",
]

[project]
name = "dask-cuda"
dynamic = [
    "version",
    "dependencies",
]
description = "Utilities for Dask and CUDA interactions"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "NVIDIA Corporation" },
]
license= { text = "Apache-2.0" }
requires-python = ">=3.8"
classifiers=[
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[project.scripts]
dask-cuda-worker = "dask_cuda.cli.dask_cuda_worker:go"
dask-config = "dask_cuda.cli.dask_config:go"

[project.urls]
Homepage = "https://github.com/rapidsai/dask-cuda"

[tool.setuptools]
license-files = ["LICENSE"]
package-dir = {"" = "."}
packages = ["dask_cuda"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "dask_cuda/_version.py"
versionfile_build = "dask_cuda/_version.py"
tag_prefix = "v"
parentdir_prefix = "dask_cuda-"
