[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=64.0.0",
    "tomli  ; python_version < '3.11'",
    "versioneer>=0.24",
]

[project]
name = "dask-cuda"
dynamic = [
    "version",
]
description = "Utilities for Dask and CUDA interactions"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "NVIDIA Corporation" },
]
license= { text = "Apache-2.0" }
requires-python = ">=3.8"
dependencies = [
    "dask >=2022.12.0",
    "distributed >=2022.12.0",
    "pynvml >=11.0.0",
    "numpy >=1.18.0",
    "numba >=0.54",
    "pandas >=1.0",
    "zict >=0.1.3",
]
classifiers=[
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[project.scripts]
dask-cuda-worker = "dask_cuda.cli.dask_cuda_worker:go"
dask-config = "dask_cuda.cli.dask_config:go"

[project.optional-dependencies]
docs = [
    "numpydoc>=1.1.0",
    "sphinx",
    "sphinx-click>=2.7.1",
    "sphinx-rtd-theme>=0.5.1",
]
test = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/rapidsai/dask-cuda"

[tool.coverage.run]
disable_warnings = [
    "include-ignored",
]
include = [
    "dask_cuda/*",
]
omit = [
    "dask_cuda/tests/*",
]

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
order_by_type = true
known_dask = [
    "dask",
    "distributed",
]
known_rapids = [
    "rmm",
    "cuml",
    "cugraph",
    "dask_cudf",
    "cudf",
    "ucp",
]
known_first_party = [
    "dask_cuda",
]
default_section = "THIRDPARTY"
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "DASK",
    "RAPIDS",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
skip = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
    "__init__.py",
    "versioneer.py",
]

[tool.pytest.ini_options]
filterwarnings = [
    "error::DeprecationWarning",
    "error::FutureWarning",
    "ignore::DeprecationWarning:pkg_resources",
    "ignore:distutils Version classes are deprecated.*:DeprecationWarning:",
    # tornado 6.2, remove when dask/distributed#6669 is fixed
    "ignore:clear_current is deprecated:DeprecationWarning:",
    "ignore:make_current is deprecated:DeprecationWarning:",
]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
exclude = [
    "docs",
    "tests",
    "docs.*",
    "tests.*",
]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "dask_cuda/_version.py"
versionfile_build = "dask_cuda/_version.py"
tag_prefix = "v"
parentdir_prefix = "dask_cuda-"
