[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=64.0.0",
    "tomli  ; python_version < '3.11'",
]

[project]
name = "dask-cuda"
version = "23.12.00"
description = "Utilities for Dask and CUDA interactions"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "NVIDIA Corporation" },
]
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
    "dask ==2023.9.2",
    "distributed ==2023.9.2",
    "pynvml >=11.0.0,<11.5",
    "numpy >=1.21",
    "numba >=0.57",
    "pandas >=1.3,<1.6.0dev0",
    "zict >=2.0.0",
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.scripts]
dask-cuda-worker = "dask_cuda.cli:worker"
dask-cuda-config = "dask_cuda.cli:config"

[project.entry-points.dask_cli]
cuda = "dask_cuda.cli:cuda"

[project.optional-dependencies]
docs = [
    "numpydoc>=1.1.0",
    "sphinx",
    "sphinx-click>=2.7.1",
    "sphinx-rtd-theme>=0.5.1",
]
test = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/rapidsai/dask-cuda"
Documentation = "https://docs.rapids.ai/api/dask-cuda/stable/"
Source = "https://github.com/rapidsai/dask-cuda"

[tool.coverage.run]
disable_warnings = [
    "include-ignored",
]
include = [
    "dask_cuda/*",
]
omit = [
    "dask_cuda/tests/*",
]

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
order_by_type = true
known_dask = [
    "dask",
    "distributed",
]
known_rapids = [
    "rmm",
    "cuml",
    "cugraph",
    "dask_cudf",
    "cudf",
    "ucp",
]
known_first_party = [
    "dask_cuda",
]
default_section = "THIRDPARTY"
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "DASK",
    "RAPIDS",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
skip = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
    "__init__.py",
]

[tool.pytest.ini_options]
filterwarnings = [
    "error::DeprecationWarning",
    "error::FutureWarning",
    # remove after https://github.com/rapidsai/dask-cuda/issues/1087 is closed
    "ignore:There is no current event loop:DeprecationWarning:tornado",
]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
exclude = [
    "docs",
    "tests",
    "docs.*",
    "tests.*",
]
